tests/build/fail/widget_new/incorrect_arg_type6.stderr
error[E0308]: mismatched types
  --> $DIR/incorrect_arg_type6.rs:13:23
   |
13 |             simple_b: true,
   |                       ^^^^ expected `u32`, found `bool`
